--- a/index2.html
+++ b/index2.html
@@ -616,8 +616,8 @@ async function get_forecast_temperature_data(url) {
 
 	var latitude = out[0].lat;
 	var longitude = out[0].lon;
-	console.log("location_latitude: ", location_latitude);
-	console.log("location_longitude: ", location_longitude);
+	console.log("latitude: ", latitude);
+	console.log("longitude: ", longitude);
 
 	// [Step 0] Get weather data
 	// https://open-meteo.com/en/docs
