--- a/index3.html
+++ b/index3.html
@@ -221,7 +221,7 @@ async function fetch_CORS(url, method, data, w_or_wo_proxyhandler, return_type) 
 					await show_pdf_on_page(github_url_of_externally_downloaded_data);
 
 					// a file was loaded before, so remove the blob URL from memory to use resources effectively
-					URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+					// URL.revokeObjectURL(github_url_of_externally_downloaded_data);
 					
 					return "File blob loaded with success";
 				})
@@ -362,11 +362,9 @@ async function jQuery_CORS(url, method, data, return_type) {
 		// OR
 		settings.xhrFields = {responseType: 'blob'};
 
-		return $.ajax(url, [,settings])
-			//.done(function(response) { console.log('response: ', response); return response; });
-			.done(function(text_pdf) { console.log('text_pdf: ', text_pdf); 
-						  return new Blob([text_pdf]);
-			})
+		var text_pdf = await $.ajax(url, [,settings]).done(function(response) { console.log('response: ', response); return response; });
+
+		return await new Blob([text_pdf])
 			.then(async function(blob_object) { 
 				console.log('blob_object: ', blob_object);
 				return blob_object;
@@ -375,10 +373,9 @@ async function jQuery_CORS(url, method, data, return_type) {
 	} else if (return_type == 'blob_file_pdf') {
 		settings.xhrFields = {responseType: 'blob'};
 
-		return $.ajax(settings)
-			.done(function(text_pdf) { console.log('text_pdf: ', text_pdf); 
-						  return new Blob([text_pdf]);
-			})
+		var text_pdf = await $.ajax(url, [,settings]).done(function(response) { console.log('response: ', response); return response; });
+		
+		return await new Blob([text_pdf])
 			.then(async function(blob_object) { 
 				console.log('blob_object: ', blob_object);
 				return new File ([blob_object], "file_download", {type: "application/pdf"});
@@ -390,7 +387,7 @@ async function jQuery_CORS(url, method, data, return_type) {
 				await show_pdf_on_page(github_url_of_externally_downloaded_data);
 			
 				// a file was loaded before, so remove the blob URL from memory to use resources effectively
-				URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+				// URL.revokeObjectURL(github_url_of_externally_downloaded_data);
 				
 				return "File blob loaded with success";
 			})
