--- a/index3.html
+++ b/index3.html
@@ -207,7 +207,8 @@ async function fetch_CORS(url, method, data, w_or_wo_proxyhandler, return_type) 
 					await show_pdf_on_page(github_url_of_externally_downloaded_data);
 
 					// a file was loaded before, so remove the blob URL from memory to use resources effectively
-					URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+					// URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+					await setTimeout(function() { URL.revokeObjectURL(github_url_of_externally_downloaded_data); }, 200);
 					
 					return "File blob loaded with success";
 				})
@@ -226,7 +227,8 @@ async function fetch_CORS(url, method, data, w_or_wo_proxyhandler, return_type) 
 					await show_pdf_on_page(github_url_of_externally_downloaded_data);
 
 					// a file was loaded before, so remove the blob URL from memory to use resources effectively
-					URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+					// URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+					await setTimeout(function() { URL.revokeObjectURL(github_url_of_externally_downloaded_data); }, 200);
 					
 					return "File blob loaded with success";
 				})
@@ -378,7 +380,8 @@ async function jQuery_CORS(url, method, data, return_type) {
 
 		var text_pdf = await $.ajax(url, [,settings]).done(function(response) { console.log('response: ', response); return response; });
 		
-		var blob_object = new Blob([text_pdf], {type:"application/pdf"});
+		// var blob_object = new Blob([text_pdf], {type:"application/pdf"});
+		var blob_object = new Blob([text_pdf], { type: 'application/octet-stream' });
 		console.log('blob_object: ', blob_object);
 		var file_blob_object = new File ([blob_object], "file_download", {type: "application/pdf"});
 		console.log('file_blob_object: ', file_blob_object);
@@ -387,8 +390,7 @@ async function jQuery_CORS(url, method, data, return_type) {
 		await show_pdf_on_page(github_url_of_externally_downloaded_data);
 	
 		// a file was loaded before, so remove the blob URL from memory to use resources effectively
-		// await setTimeout(function() { URL.revokeObjectURL(github_url_of_externally_downloaded_data); }, 100);
-		//URL.revokeObjectURL(github_url_of_externally_downloaded_data);
+		await setTimeout(function() { URL.revokeObjectURL(github_url_of_externally_downloaded_data); }, 200);
 		
 		return "File blob loaded with success";
 		
