--- a/index3.html
+++ b/index3.html
@@ -90,12 +90,12 @@ async function run_Image_CORS() {
 	imageElement.setAttribute('crossOrigin', "");
 	imageElement.setAttribute('headers', {"Content-Type": "application/json", "Access-Control-Allow-Origin": "*"});
 	imageElement.src = url;
-	imageElement.onload = async () => { ctx.drawImage(image, 0, 0, canvasElement_width, canvasElement_height); };
+	imageElement.onload = async () => { ctx.drawImage(imageElement, 0, 0, canvasElement_width, canvasElement_height); };
 
 	const imageData = ctx.getImageData(0, 0, canvasElement_width, canvasElement_height);
 	const pixelData = Array.from(imageData.data);
+	console.log('pixelData: ', pixelData); 
 	
-	console.log('image: ', image); 
 	document.getElementsByTagName('body')[0].appendChild(canvasElement);
 }
 	
